# python-app-template

./: .pylintrc  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: cache-uv-build.yaml  ci-cd.yaml  docker-build-and-scan.yaml  pylint.yaml  pytest.yaml  release.yaml  ruff.yaml  run-branch-scan.yaml  uv-build.yaml
data/weather/: sample.json
src/: main.py
src/core/: __init__.py  logging.py
src/sample_python_app/: __init__.py  main.py
src/sample_python_app/core/: __init__.py  config.py  data_loader.py  display.py  logging.py
src/sample_python_app/exceptions/: __init__.py  custom.py
src/sample_python_app/models/: __init__.py  weather_gov.py
src/sample_python_app/services/: __init__.py  data_loader.py
src/sample_python_app/ui/: __init__.py  synthwave.py
tests/: __init__.py  test_astronomical_display.py  test_config.py  test_figlet_rich.py  test_logging.py  test_main.py
