[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
omit = ["tests/*"]
[project]
name = "python-app-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.1.0",
    "coverage>=7.13.2",
    "isort>=7.0.0",
    "loguru>=0.7.3",
    "pathlib>=1.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pylint>=4.0.4",
    "pylint-pydantic>=0.4.1",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
build = ["uv ~= 0.9.27"]

[tool.semantic_release]
build_command = """
    python -m pip install -e '.[build]'
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""
