[project]
name = "sample_python_app"
version = "1.5.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.1.0",
    "coverage>=7.13.2",
    "httpx>=0.28.1",
    "isort>=7.0.0",
    "loguru>=0.7.3",
    "pathlib>=1.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyfiglet>=1.0.4",
    "pylint>=4.0.4",
    "pylint-pydantic>=0.4.1",
    "pytest>=9.0.2",
    "rich>=14.3.2",
]

[project.optional-dependencies]
build = ["uv >= 0.9.28"]

[build-system]
requires = ["uv_build >= 0.9.28, < 0.10.0"]
build-backend = "uv_build"

[project.scripts]
sample-python-app = "sample_python_app.main:run_app"

[tool.semantic_release]
build_command = """
    python -m pip install -e '.[build]'
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""
version_toml = ["pyproject.toml:project.version"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
omit = ["tests/*"]
